# event

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
crm_event/: README.rst  __manifest__.py
crm_event/readme/: USAGE.md
crm_event/static/description/: index.html
event_mail/: README.rst
event_min_seat/: README.rst
event_registration_sale_order_autocancel/: __init__.py  __manifest__.py  exceptions.py  hooks.py
event_registration_sale_order_autocancel/controllers/: main.py
event_registration_sale_order_autocancel/data/: model_name_data.xml
event_registration_sale_order_autocancel/demo/: assets.xml  model_name_demo.xml
event_registration_sale_order_autocancel/models/: abstract_something.py  model_name.py
event_registration_sale_order_autocancel/report/: __init__.py  report_name.py
event_registration_sale_order_autocancel/security/: some_model_security.xml
event_registration_sale_order_autocancel/templates/: website.xml
event_registration_sale_order_autocancel/tests/: test_abstract_something.py  test_something.py
event_registration_sale_order_autocancel/views/: model_name_view.xml  report_name.xml
event_registration_sale_order_autocancel/wizards/: wizard_model.py  wizard_model_view.xml
event_sale_reservation/: README.rst  __manifest__.py
event_sale_reservation/i18n/: event_sale_reservation.pot  it.po
event_sale_reservation/readme/: CONTRIBUTORS.md  INSTALL.md
event_stage_cancelled/: README.rst
event_stage_cancelled/i18n/: it.po
partner_event/: README.rst  __manifest__.py
partner_event/views/: res_partner_view.xml
sale_crm_event_reservation/: README.rst
setup/_metapackage/: pyproject.toml  setup.py
website_event_contact/: README.rst  __manifest__.py  __openerp__.py
website_event_contact/i18n/: it.po  website_event_contact.pot
website_event_contact/views/: website_event_contact.xml
website_event_filter_city/: README.rst  __manifest__.py
website_event_filter_city/readme/: CONFIGURE.md  CONTRIBUTORS.md
website_event_membership_restriction/: README.rst
website_event_questions_by_ticket/: README.rst
website_event_require_login/: README.rst
website_event_sale_b2x_alt_price/: README.rst
website_event_track_stage_cancelled/: README.rst
(+25 files in other folders)
