[project]
name = "odoo-addons-oca-event"
version = "17.0.20241212.0"
dependencies = [
    "odoo-addon-crm_event>=17.0dev,<17.1dev",
    "odoo-addon-event_mail>=17.0dev,<17.1dev",
    "odoo-addon-event_min_seat>=17.0dev,<17.1dev",
    "odoo-addon-event_registration_cancel_reason>=17.0dev,<17.1dev",
    "odoo-addon-event_registration_partner_unique>=17.0dev,<17.1dev",
    "odoo-addon-event_stage_cancelled>=17.0dev,<17.1dev",
    "odoo-addon-partner_event>=17.0dev,<17.1dev",
    "odoo-addon-website_event_filter_city>=17.0dev,<17.1dev",
    "odoo-addon-website_event_membership_restriction>=17.0dev,<17.1dev",
    "odoo-addon-website_event_questions_by_ticket>=17.0dev,<17.1dev",
    "odoo-addon-website_event_require_login>=17.0dev,<17.1dev",
    "odoo-addon-website_event_track_stage_cancelled>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
